--- a/src/sass/modules/_footer.sass
+++ b/src/sass/modules/_footer.sass
@@ -1,7 +1,7 @@
 .footer
     background-color: #1f1f24
     padding: 7vh 0
-    .foot-top
+    .top
         display: flex
         flex-direction: row
         justify-content: center
@@ -9,7 +9,7 @@
         h6,p
             padding-top: 1vh
             color: #fff
-        .info
+        .coordonne
             display: flex
             flex: row
             gap: 1vw
@@ -17,7 +17,7 @@
             i
                 color: #ce1212
                 font-size: xx-large
-    .footer-botum
+    .bottom
         text-align: center
         padding-top: 5vh
 
@@ -26,7 +26,7 @@
         span
             color: #ce1212
 
-.iconSocialMedia
+.icons
     padding-top: 2vh
     i
         border: 1px solid #7595b0
@@ -37,9 +37,20 @@
         &:hover
             border-color: #ce1212
             color: #ce1212
-.footer-separator
+.footer-ligne
     border: none
     border-top: 1px solid #fff
     margin: 2vh 0
     width: 90%
     margin: 0 auto
+@media (max-width :428px)
+    .footer
+        display: flex
+        gap: 3vw
+        flex-direction: column
+        .top
+            flex-direction: column
+            padding: 10px
+            .coordonne
+                flex-direction: column
+            
