--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20137,11 +20137,18 @@ nav .contact-btn button:hover {
   background-color: #fa3434;
 }
 
+.close {
+  display: none;
+}
+
 @media (max-width: 428px) {
   nav .display-menu {
     display: flex;
   }
-  nav .menu {
+  .close {
+    display: flex;
+  }
+  .menu {
     flex-direction: column;
     align-items: start;
     padding-left: 50px;
@@ -20157,8 +20164,12 @@ nav .contact-btn button:hover {
     left: 0;
     border-radius: 20px;
   }
-  nav a {
+  a {
     color: black;
+  }
+  .modal {
+    width: 100%;
+    justify-content: center;
   }
 }
 .modal {
@@ -20263,7 +20274,7 @@ body {
   padding-top: 50px;
   padding: 20px;
 }
-.restaurant-Home button {
+.restaurant-Home .btn {
   background-color: #ce1212;
   padding: 6px 32px;
   border-radius: 50px;
@@ -20272,6 +20283,9 @@ body {
   text-decoration: none;
   color: white;
   font-weight: 500;
+}
+.restaurant-Home .watch-btn {
+  border: none;
 }
 .restaurant-Home a {
   text-decoration: none;
@@ -20324,6 +20338,39 @@ body {
   flex-direction: row;
   padding: 10px;
 }
+.restaurant-about .rightside-icons .rightside-icon i {
+  color: red;
+}
+.restaurant-about .image-container {
+  position: relative;
+}
+.restaurant-about .image-container img {
+  display: block;
+}
+.restaurant-about .play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80px;
+  height: 80px;
+  background-color: rgba(255, 0, 0, 0.7);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+.restaurant-about .play-button::before {
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  border-left: 25px solid white;
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  margin-left: 8px;
+}
 
 .whychooseymmy {
   display: flex;
@@ -20344,11 +20391,17 @@ body {
   color: white;
 }
 .whychooseymmy .cards #card1 button {
-  background-color: #d01d1d;
+  background-color: #e64a4a;
+  padding: 6px 32px;
+  border-radius: 50px;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  color: white;
 }
 .whychooseymmy .cards #card1 button:hover {
   background-color: white;
-  color: red;
+  color: white;
 }
 .whychooseymmy .cards .card {
   width: 20%;
@@ -20567,6 +20620,145 @@ body {
 }
 .carousel-globale .activeIndicator {
   background-color: black;
+}
+
+.carousel-globale1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.carousel-globale1 #carousel1 {
+  position: relative;
+  width: 100vw;
+  background: #f2f2f2;
+  overflow: hidden;
+}
+.carousel-globale1 .group {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.carousel-globale1 .carousel {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+.carousel-globale1 .next, .carousel-globale1 .previous {
+  display: none;
+  padding: 1vh 2vw;
+  border-radius: 20px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.carousel-globale1 .next {
+  right: 0px;
+  display: none;
+}
+.carousel-globale1 .previous {
+  left: 0;
+  display: none;
+}
+.carousel-globale1 .indicators-grp {
+  width: 100%;
+  padding: 2vh 0;
+  position: absolute;
+  bottom: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.carousel-globale1 .indicator {
+  padding: 5px;
+  background: rgb(169, 22, 22);
+  border-radius: 50%;
+}
+.carousel-globale1 .activeIndicator {
+  background-color: black;
+}
+.carousel-globale1 .img12 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  background-image: url(../images/events-1.jpg);
+  position: relative;
+  background-size: 100% 100%;
+  width: 50%;
+  padding: 30px;
+  color: white;
+}
+.carousel-globale1 .img12::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.278);
+}
+.carousel-globale1 .img2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  background-image: url(../images/events-2.jpg);
+  position: relative;
+  background-size: 100% 100%;
+  width: 50%;
+  padding: 30px;
+  color: white;
+}
+.carousel-globale1 .img2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.278);
+}
+.carousel-globale1 .img3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  background-image: url(../images/events-3.jpg);
+  position: relative;
+  background-size: 100% 100%;
+  width: 50%;
+  padding: 30px;
+  color: white;
+}
+.carousel-globale1 .img3::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.278);
+}
+.carousel-globale1 .img4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  background-image: url(../images/events-4.jpg);
+  position: relative;
+  background-size: 100% 100%;
+  width: 50%;
+  padding: 30px;
+  color: white;
+}
+.carousel-globale1 .img4::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.278);
 }
 
 .bookatable {
@@ -20890,15 +21082,19 @@ body {
   .carousel-globale .carousel {
     width: 100%;
   }
-  .carousel-globale .carousel .slide {
+  .carousel-globale .slide {
     width: 100%;
     flex-direction: column;
+    padding: 40px;
   }
-  .carousel-globale .carousel .slide .slide-left {
+  .carousel-globale .slide .slide-left {
     width: 100%;
   }
-  .carousel-globale .carousel .slide img {
+  .carousel-globale .slide img {
     width: 100%;
+  }
+  .carousel-globale .indicators-grp {
+    top: 95%;
   }
   .restaurant-menu .content-plat {
     flex-direction: column;
@@ -20925,7 +21121,15 @@ body {
     width: 90%;
   }
   .restaurant-gallery {
-    width: 90%;
+    width: 100%;
+  }
+  .restaurant-gallery .gallery-item-2, .restaurant-gallery .gallery-item-4, .restaurant-gallery .gallery-item-5, .restaurant-gallery .gallery-item-1 {
+    opacity: 0;
+  }
+  .restaurant-gallery .gallery-item-3 {
+    width: 91vw;
+    height: 70vw;
+    border: none;
   }
 }
 .footer {
