--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -2,15 +2,15 @@
     margin: 0
     padding: 0
 nav
-    display: flex 
-    justify-content: space-around 
+    display: flex
+    justify-content: space-around
     align-items: center
     background-color: #ffffff
     color: black
     position: fixed
     width: 100vw
     padding: 5vh 0
-    z-index: 9999 
+    z-index: 9999
     opacity: 0.9
     .point
         color: red
@@ -22,22 +22,21 @@ nav
         &:hover
             text-decoration: underline
             text-decoration-color: red
-        
+
     .menu
-       display: flex 
-       justify-content: space-between
-       gap: 3vw
+        display: flex
+        justify-content: space-between
+        gap: 3vw
     .display-menu
-        display: none     
-    
+        display: none
 
     .leftside-menu
-       display: flex
-       flex-direction: row
-       align-items: center
-       justify-content: center
-       align-content: center
-        
+        display: flex
+        flex-direction: row
+        align-items: center
+        justify-content: center
+        align-content: center
+
     .contact-btn
         display: flex
         align-items: center
@@ -57,12 +56,15 @@ nav
             font-family: "Inter"
             &:hover
                 background-color: #fa3434
+.close
+    display: none
 @media (max-width :428px)
-   nav
-    .display-menu
-        display: flex
+    nav
+        .display-menu
+            display: flex
 
-    
+    .close
+        display: flex
     .menu
         flex-direction: column
         align-items: start
@@ -79,26 +81,24 @@ nav
         left: 0
         border-radius: 20px
     a
-        color: black    
-       
-    
-    
-    
-
+        color: black
+    .modal
+        width: 100%
+        justify-content: center
 .modal
-    display: none 
-    position: fixed 
-    z-index: 1000 
+    display: none
+    position: fixed
+    z-index: 1000
     left: 0
     top: 0
     width: 100%
     height: 100%
-    overflow: auto 
-    background-color: rgba(0,0,0,0.5) 
+    overflow: auto
+    background-color: rgba(0,0,0,0.5)
 
 .modal-content
     background-color: #fff
-    margin: 15% auto 
+    margin: 15% auto
     padding: 20px
     border: 1px solid #888
     width: 80%
