--- a/src/sass/modules/_main.sass
+++ b/src/sass/modules/_main.sass
@@ -31,7 +31,7 @@ body
     .leftside
         padding-top: 50px
         padding:20px
-    button
+    .btn
         background-color: #ce1212
         padding: 6px 32px
         border-radius: 50px
@@ -40,6 +40,8 @@ body
         text-decoration: none
         color: white
         font-weight: 500
+    .watch-btn
+        border: none    
     a
         text-decoration: none
         color: black
@@ -80,7 +82,39 @@ body
             display: flex
             flex-direction: row
             padding: 10px
-           
+            i
+                color: red
+                
+    .image-container 
+        position: relative
+    .image-container img 
+        display: block
+
+
+    .play-button 
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+        width: 80px
+        height: 80px
+        background-color: rgba(255, 0, 0, 0.7) 
+        border-radius: 50%
+        display: flex
+        justify-content: center
+        align-items: center
+        text-decoration: none
+        &::before
+            content: ''
+            display: block
+            width: 0
+            height: 0
+            border-left: 25px solid white
+            border-top: 15px solid transparent
+            border-bottom: 15px solid transparent
+            margin-left: 8px
+
+       
 .whychooseymmy
     display: flex
     flex-direction: column
@@ -99,10 +133,16 @@ body
             background-color: #ce1212
             color: white 
             button
-                background-color: #d01d1d
+                background-color: #e64a4a
+                padding: 6px 32px
+                border-radius: 50px
+                outline: none
+                border: none
+                text-decoration: none
+                color: white
                 &:hover
                     background-color: white 
-                    color: red        
+                    color: white        
         .card
             width: 20%
             display: flex
@@ -296,117 +336,145 @@ body
     .activeIndicator
         background-color: black
 
-
-// .container-slide
-//     position: relative
-//     display: flex
-//     flex-direction: column
-
-
-// .carousel-images 
-//     display: flex
-//     overflow: hidden
-
-
-// .carousel-images img 
-//     width: 100%
-//     display: none
+.carousel-globale1
+    display: flex
+    align-items: center
+    justify-content: center
+    #carousel1
+        position: relative
+        width: 100vw
+        background: #f2f2f2
+        overflow: hidden
+    .group
+        display: flex
+        flex-direction: row
+        width: 100%    
 
 
-// .indicators 
-//     display: flex
-//     justify-content: center
+    .carousel
+        display: flex
+        transition: transform 0.5s ease
+    
 
-
-// .indicator 
-//     width: 10px
-//     height: 10px
-//     background-color: gray
-//     margin: 0 5px
-//     border-radius: 50%
-
-
-// .active 
-//     background-color: black
-
-
+  
        
-// .img12 
-//     display: flex
-//     flex-direction: column
-//     justify-content: space-around
-//     align-items: center
-//     text-align: center
-//     background-image: url(../images/events-1.jpg)
-//     position: relative
-//     background-size: 100% 100%
-//     width: 40%
-//     height: 80vh
-//     color: white
-//     &::before
-//         content: ""
-//         position: absolute
-//         top: 0
-//         width: 100%
-//         height: 100%
-//         background: rgba(0, 0, 0, 0.278)
-// .img2 
-//     display: flex
-//     flex-direction: column
-//     justify-content: space-around
-//     align-items: center
-//     text-align: center
-//     background-image: url(../images/events-2.jpg)
-//     position: relative
-//     background-size: 100% 100%
-//     width: 40%
-//     height: 80vh
-//     color: white
-//     &::before
-//         content: ""
-//         position: absolute
-//         top: 0
-//         width: 100%
-//         height: 100%
-//         background: rgba(0, 0, 0, 0.278)
-// .img3 
-//     display: flex
-//     flex-direction: column
-//     justify-content: space-around
-//     align-items: center
-//     text-align: center
-//     background-image: url(../images/events-3.jpg)
-//     position: relative
-//     background-size: 100% 100%
-//     width: 40%
-//     height: 80vh
-//     color: white
-//     &::before
-//         content: ""
-//         position: absolute
-//         top: 0
-//         width: 100%
-//         height: 100%
-//         background: rgba(0, 0, 0, 0.278)
-// .img4
-//     display: flex
-//     flex-direction: column
-//     justify-content: space-around
-//     align-items: center
-//     text-align: center
-//     background-image: url(../images/events-4.jpg)
-//     position: relative
-//     background-size: 100% 100%
-//     width: 40%
-//     height: 80vh
-//     color: white
-//     &::before
-//         content: ""
-//         position: absolute
-//         top: 0
-//         width: 100%
-//         height: 100%
-//         background: rgba(0, 0, 0, 0.278)
+
+
+    
+    .next,.previous 
+        display: none
+        padding: 1vh 2vw
+        border-radius: 20px
+        position: absolute
+        top: 50%
+        transform: translateY(-50%)
+
+
+    .next
+        right:0px 
+        display: none
+
+    .previous
+        left:0
+        display: none 
+
+
+    .indicators-grp
+        width: 100%
+        padding: 2vh 0
+        position: absolute
+        bottom: 10%
+        display: flex
+        align-items: center
+        justify-content: center
+        gap: 10px
+
+    .indicator
+        padding: 5px
+        background: rgb(169, 22, 22)
+        border-radius: 50%
+
+    .activeIndicator
+        background-color: black
+
+
+        
+    .img12 
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+        align-items: center
+        text-align: center
+        background-image: url(../images/events-1.jpg)
+        position: relative
+        background-size: 100% 100%
+        width: 50%
+        padding: 30px
+        color: white
+        &::before
+            content: ""
+            position: absolute
+            top: 0
+            width: 100%
+            height: 100%
+            background: rgba(0, 0, 0, 0.278)
+    .img2 
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+        align-items: center
+        text-align: center
+        background-image: url(../images/events-2.jpg)
+        position: relative
+        background-size: 100% 100%
+        width: 50%
+        padding: 30px
+        color: white
+        &::before
+            content: ""
+            position: absolute
+            top: 0
+            width: 100%
+            height: 100%
+            background: rgba(0, 0, 0, 0.278)
+    .img3 
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+        align-items: center
+        text-align: center
+        background-image: url(../images/events-3.jpg)
+        position: relative
+        background-size: 100% 100%
+        width: 50%
+        padding: 30px 
+        color: white
+        &::before
+            content: ""
+            position: absolute
+            top: 0
+            width: 100%
+            height: 100%
+            background: rgba(0, 0, 0, 0.278)
+    .img4
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+        align-items: center
+        text-align: center
+        background-image: url(../images/events-4.jpg)
+        position: relative
+        background-size: 100% 100%
+        width: 50%
+        padding: 30px
+        color: white
+        &::before
+            content: ""
+            position: absolute
+            top: 0
+            width: 100%
+            height: 100%
+            background: rgba(0, 0, 0, 0.278)
 
 
    
@@ -685,15 +753,16 @@ body
         width: 100%
         .carousel
             width: 100%
-            .slide
+        .slide
+            width: 100%
+            flex-direction: column
+            padding: 40px
+            .slide-left 
                 width: 100%
-                flex-direction: column
-                // padding: 40px
-                .slide-left 
-                    width: 100%
-                img
-                    width: 100%
-
+            img
+                width: 100%
+        .indicators-grp
+            top: 95%
     .restaurant-menu
       
         .content-plat
@@ -716,7 +785,12 @@ body
         iframe
             width: 90%                               
     .restaurant-gallery 
-        width: 90%
-        .gallery-item-5
+        width: 100%
+        .gallery-item-2 , .gallery-item-4 , .gallery-item-5 , .gallery-item-1
+            opacity: 0
+        .gallery-item-3
+            width: 91vw
+            height: 70vw
+            border: none
 
 
