--- a/src/sass/modules/_main.sass
+++ b/src/sass/modules/_main.sass
@@ -22,7 +22,8 @@ body
         animation-direction: alternate
 
     h1
-        font-family: cursive
+        font-family: "Amatic SC"
+        font-size: xx-large
       
     .left
   
@@ -61,7 +62,8 @@ body
     text-align: center
     padding: 20px
     h1
-        font-family: cursive
+        font-family: "Amatic SC"
+        font-size: xx-large
         text-align: center
     span
         color: red
@@ -205,6 +207,8 @@ body
         font-weight: bold
     h2
         padding-bottom: 6vh
+        font-family: "Amatic SC"
+        font-size: xx-large
     span
         color: #d11212
     .rest
@@ -266,7 +270,8 @@ body
         position: relative
         overflow: hidden
         h1
-            font-family: cursive
+            font-family: "Amatic SC"
+            font-size: xx-large
             text-align: center
         span
             color: red
@@ -336,148 +341,6 @@ body
     .activeIndicator
         background-color: black
 
-.carousel-globale1
-    display: flex
-    align-items: center
-    justify-content: center
-    #carousel1
-        position: relative
-        width: 100vw
-        background: #f2f2f2
-        overflow: hidden
-    .group
-        display: flex
-        flex-direction: row
-        width: 100%    
-
-
-    .carousel
-        display: flex
-        transition: transform 0.5s ease
-    
-
-  
-       
-
-
-    
-    .next,.previous 
-        display: none
-        padding: 1vh 2vw
-        border-radius: 20px
-        position: absolute
-        top: 50%
-        transform: translateY(-50%)
-
-
-    .next
-        right:0px 
-        display: none
-
-    .previous
-        left:0
-        display: none 
-
-
-    .indicators-grp
-        width: 100%
-        padding: 2vh 0
-        position: absolute
-        bottom: 10%
-        display: flex
-        align-items: center
-        justify-content: center
-        gap: 10px
-
-    .indicator
-        padding: 5px
-        background: rgb(169, 22, 22)
-        border-radius: 50%
-
-    .activeIndicator
-        background-color: black
-
-
-        
-    .img12 
-        display: flex
-        flex-direction: column
-        justify-content: space-around
-        align-items: center
-        text-align: center
-        background-image: url(../images/events-1.jpg)
-        position: relative
-        background-size: 100% 100%
-        width: 50%
-        padding: 30px
-        color: white
-        &::before
-            content: ""
-            position: absolute
-            top: 0
-            width: 100%
-            height: 100%
-            background: rgba(0, 0, 0, 0.278)
-    .img2 
-        display: flex
-        flex-direction: column
-        justify-content: space-around
-        align-items: center
-        text-align: center
-        background-image: url(../images/events-2.jpg)
-        position: relative
-        background-size: 100% 100%
-        width: 50%
-        padding: 30px
-        color: white
-        &::before
-            content: ""
-            position: absolute
-            top: 0
-            width: 100%
-            height: 100%
-            background: rgba(0, 0, 0, 0.278)
-    .img3 
-        display: flex
-        flex-direction: column
-        justify-content: space-around
-        align-items: center
-        text-align: center
-        background-image: url(../images/events-3.jpg)
-        position: relative
-        background-size: 100% 100%
-        width: 50%
-        padding: 30px 
-        color: white
-        &::before
-            content: ""
-            position: absolute
-            top: 0
-            width: 100%
-            height: 100%
-            background: rgba(0, 0, 0, 0.278)
-    .img4
-        display: flex
-        flex-direction: column
-        justify-content: space-around
-        align-items: center
-        text-align: center
-        background-image: url(../images/events-4.jpg)
-        position: relative
-        background-size: 100% 100%
-        width: 50%
-        padding: 30px
-        color: white
-        &::before
-            content: ""
-            position: absolute
-            top: 0
-            width: 100%
-            height: 100%
-            background: rgba(0, 0, 0, 0.278)
-
-
-   
 .bookatable
     display: flex
     flex-direction: column
@@ -488,6 +351,8 @@ body
     p
         text-align: center
     h1
+        font-family: "Amatic SC"
+        font-size: xx-large
         span
             color: #ce1212
     .table-globale
@@ -539,7 +404,8 @@ body
         justify-content: center 
         padding-top: 5vh
         h1
-            font-family: cursive
+            font-family: "Amatic SC"
+            font-size: xx-large
             text-align: center
         span
             color: red
@@ -653,20 +519,21 @@ body
         width: 100%
     .gallery-nav
         li
-        background-color: #ccc
-        border-radius: 50%
-        height: 10px
-        margin: 0 5px
-        width: 10px
-        cursor: pointer
-        transition: background-color 0.3s ease
+            background-color: #ccc
+            border-radius: 50%
+            height: 10px
+            margin: 0 5px
+            width: 10px
+            cursor: pointer
+            transition: background-color 0.3s ease
         .active
             background-color: #555
 .restaurant-chefs
     text-align: center
     padding: 20px
     h1
-        font-family: cursive
+        font-family: "Amatic SC"
+        font-size: xx-large
         text-align: center
         padding: 20px
     span
@@ -711,6 +578,10 @@ body
     
     i
         color: white             
+.restaurant-contact
+    .font
+        font-family: "Amatic SC"
+        font-size: xx-large
 
 @media (max-width :428px)
     .restaurant-Home
