--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -59,15 +59,22 @@ nav
             font-family: "Inter"
             &:hover
                 background-color: #fa3434
-.close
+.close-menu
     display: none
 @media (max-width :428px)
     nav
         .display-menu
             display: flex
 
-    .close
+    .close-menu
         display: flex
+        color: #aaa
+        float: right
+        font-size: 28px
+        font-weight: bold
+        position: absolute
+        top: 5px
+        right: 10px
     .menu
         flex-direction: column
         align-items: start
@@ -108,7 +115,7 @@ nav
     max-width: 400px
     border-radius: 10px
     position: relative
-.close
+.close1
     color: #aaa
     float: right
     font-size: 28px
